# project

./: 2.csv  B.csv.csv  a.csv  c.csv  demo-no-threads.py  demo-threads-step2.py  demo-threads-step3.py  demo-threads-step4.py  i.csv  metingen.csv  metingen.txt  nee.csv.csv  ons.csv  p.csv  pyproject.toml  s.csv.csv  t.csv  test.csv  testdata.txt  x.csv  yeet.csv.csv.csv  yes.csv
src/: list-devices  test-arduino-visa-module.py  testdata.txt  typescript
src/pythondaq/controllers/: arduino_device.py
src/pythondaq/models/: diode_experiment.py
src/pythondaq/views/: application.py  diode.py  script.py
